Don't build distrho-libs based plugins until API stabilizes

--- a/plugins/Makefile
+++ b/plugins/Makefile
@@ -15,13 +15,13 @@ libs:
 standalone:
 	$(MAKE) -C 3BandEQ/Standalone
 	$(MAKE) -C PingPongPan/Standalone
-	$(MAKE) -C StereoAudioGain/Standalone
+# 	$(MAKE) -C StereoAudioGain/Standalone
 
 lv2:
 	$(MAKE) -C 3BandEQ/LV2
 	$(MAKE) -C 3BandSplitter/LV2
 	$(MAKE) -C PingPongPan/LV2
-	$(MAKE) -C StereoAudioGain/LV2
+# 	$(MAKE) -C StereoAudioGain/LV2
 
 vst:
 	$(MAKE) -C 3BandEQ/VST
@@ -33,13 +33,13 @@ clean:
 	# Standalone
 	$(MAKE) clean -C 3BandEQ/Standalone
 	$(MAKE) clean -C PingPongPan/Standalone
-	$(MAKE) clean -C StereoAudioGain/Standalone
+# 	$(MAKE) clean -C StereoAudioGain/Standalone
 
 	# LV2
 	$(MAKE) clean -C 3BandEQ/LV2
 	$(MAKE) clean -C 3BandSplitter/LV2
 	$(MAKE) clean -C PingPongPan/LV2
-	$(MAKE) clean -C StereoAudioGain/LV2
+# 	$(MAKE) clean -C StereoAudioGain/LV2
 
 	# VST
 	$(MAKE) clean -C 3BandEQ/VST
