--- a/libs/lv2-ttl-generator/GNUmakefile
+++ b/libs/lv2-ttl-generator/GNUmakefile
@@ -3,6 +3,7 @@
 all: build
 
 build: ../lv2_ttl_generator
+mingw: ../lv2_ttl_generator.exe
 
 ../lv2_ttl_generator: lv2_ttl_generator.c
 	$(CXX) lv2_ttl_generator.c -o ../lv2_ttl_generator -ldl
