--- a/ports/Makefile
+++ b/ports/Makefile
@@ -9,8 +9,8 @@ plugins: standalone lv2 vst
 
 
 libs:
-	$(MAKE) -C ../libs/juce-2.0
 	$(MAKE) -C ../libs/drowaudio
+	$(MAKE) -C ../libs/juce-2.0
 	$(MAKE) -C ../libs/juced
 	$(MAKE) -C ../libs/lv2-ttl-generator
 
@@ -18,90 +18,90 @@ standalone:
 	$(MAKE) -C arctican-function/Standalone
 	$(MAKE) -C arctican-pilgrim/Standalone
 	$(MAKE) -C argotlunar/Standalone
-	$(MAKE) -C bitmangler/Standalone
+# 	$(MAKE) -C bitmangler/Standalone
 # 	$(MAKE) -C capsaicin/Standalone
 # 	$(MAKE) -C drowaudio-distortion/Standalone
 # 	$(MAKE) -C drowaudio-distortionshaper/Standalone
 # 	$(MAKE) -C drowaudio-flanger/Standalone
 # 	$(MAKE) -C drowaudio-reverb/Standalone
 # 	$(MAKE) -C drowaudio-tremolo/Standalone
-	$(MAKE) -C drumsynth/Standalone
+# 	$(MAKE) -C drumsynth/Standalone
 # 	$(MAKE) -C eqinox/Standalone
-# 	$(MAKE) -C highlife/Standalone
-	$(MAKE) -C hybridreverb2/Standalone
+	$(MAKE) -C highlife/Standalone
+# 	$(MAKE) -C hybridreverb2/Standalone
 	$(MAKE) -C juce-demo-plugin/Standalone
 # 	$(MAKE) -C juce_pitcher/Standalone
 	$(MAKE) -C sDelay/Standalone
-	$(MAKE) -C tal-dub-3/Standalone
-	$(MAKE) -C tal-filter/Standalone
+# 	$(MAKE) -C tal-dub-3/Standalone
+# 	$(MAKE) -C tal-filter/Standalone
 	$(MAKE) -C tal-filter-2/Standalone
 	$(MAKE) -C tal-noisemaker/Standalone
-	$(MAKE) -C tal-reverb/Standalone
-	$(MAKE) -C tal-reverb-2/Standalone
-	$(MAKE) -C tal-reverb-3/Standalone
+# 	$(MAKE) -C tal-reverb/Standalone
+# 	$(MAKE) -C tal-reverb-2/Standalone
+# 	$(MAKE) -C tal-reverb-3/Standalone
 	$(MAKE) -C tal-vocoder-2/Standalone
 # 	$(MAKE) -C vex/Standalone
 	$(MAKE) -C wolpertinger/Standalone
 
 lv2:
-	$(MAKE) -C arctican-function/LV2
-	$(MAKE) -C arctican-pilgrim/LV2
-	$(MAKE) -C argotlunar/LV2
-	$(MAKE) -C bitmangler/LV2
-	$(MAKE) -C capsaicin/LV2
+# 	$(MAKE) -C arctican-function/LV2
+# 	$(MAKE) -C arctican-pilgrim/LV2
+# 	$(MAKE) -C argotlunar/LV2
+# 	$(MAKE) -C bitmangler/LV2
+# 	$(MAKE) -C capsaicin/LV2
 # 	$(MAKE) -C cmt-bitcrusher/LV2
-	$(MAKE) -C drowaudio-distortion/LV2
-	$(MAKE) -C drowaudio-distortionshaper/LV2
-	$(MAKE) -C drowaudio-flanger/LV2
-	$(MAKE) -C drowaudio-reverb/LV2
-	$(MAKE) -C drowaudio-tremolo/LV2
-	$(MAKE) -C drumsynth/LV2
-	$(MAKE) -C eqinox/LV2
-	$(MAKE) -C highlife/LV2
-	$(MAKE) -C hybridreverb2/LV2
-	$(MAKE) -C juce-demo-plugin/LV2
-	$(MAKE) -C juce_pitcher/LV2
-	$(MAKE) -C k-meter/LV2
-	$(MAKE) -C sDelay/LV2
-	$(MAKE) -C tal-dub-3/LV2
-	$(MAKE) -C tal-filter/LV2
-	$(MAKE) -C tal-filter-2/LV2
-	$(MAKE) -C tal-noisemaker/LV2
-	$(MAKE) -C tal-reverb/LV2
-	$(MAKE) -C tal-reverb-2/LV2
-	$(MAKE) -C tal-reverb-3/LV2
-	$(MAKE) -C tal-vocoder-2/LV2
-	$(MAKE) -C vex/LV2
-	$(MAKE) -C wolpertinger/LV2
+# 	$(MAKE) -C drowaudio-distortion/LV2
+# 	$(MAKE) -C drowaudio-distortionshaper/LV2
+# 	$(MAKE) -C drowaudio-flanger/LV2
+# 	$(MAKE) -C drowaudio-reverb/LV2
+# 	$(MAKE) -C drowaudio-tremolo/LV2
+# 	$(MAKE) -C drumsynth/LV2
+# 	$(MAKE) -C eqinox/LV2
+# 	$(MAKE) -C highlife/LV2
+# 	$(MAKE) -C hybridreverb2/LV2
+# 	$(MAKE) -C juce-demo-plugin/LV2
+# 	$(MAKE) -C juce_pitcher/LV2
+# 	$(MAKE) -C k-meter/LV2
+# 	$(MAKE) -C sDelay/LV2
+# 	$(MAKE) -C tal-dub-3/LV2
+# 	$(MAKE) -C tal-filter/LV2
+# 	$(MAKE) -C tal-filter-2/LV2
+# 	$(MAKE) -C tal-noisemaker/LV2
+# 	$(MAKE) -C tal-reverb/LV2
+# 	$(MAKE) -C tal-reverb-2/LV2
+# 	$(MAKE) -C tal-reverb-3/LV2
+# 	$(MAKE) -C tal-vocoder-2/LV2
+# 	$(MAKE) -C vex/LV2
+# 	$(MAKE) -C wolpertinger/LV2
 
 vst:
-	$(MAKE) -C arctican-function/VST
-	$(MAKE) -C arctican-pilgrim/VST
-	$(MAKE) -C argotlunar/VST
-	$(MAKE) -C bitmangler/VST
-	$(MAKE) -C capsaicin/VST
-	$(MAKE) -C drowaudio-distortion/VST
-	$(MAKE) -C drowaudio-distortionshaper/VST
-	$(MAKE) -C drowaudio-flanger/VST
-	$(MAKE) -C drowaudio-reverb/VST
-	$(MAKE) -C drowaudio-tremolo/VST
-	$(MAKE) -C drumsynth/VST
-	$(MAKE) -C eqinox/VST
-	$(MAKE) -C highlife/VST
-	$(MAKE) -C hybridreverb2/VST
-	$(MAKE) -C juce-demo-plugin/VST
-	$(MAKE) -C juce_pitcher/VST
-	$(MAKE) -C sDelay/VST
-	$(MAKE) -C tal-dub-3/VST
-	$(MAKE) -C tal-filter/VST
-	$(MAKE) -C tal-filter-2/VST
-	$(MAKE) -C tal-noisemaker/VST
-	$(MAKE) -C tal-reverb/VST
-	$(MAKE) -C tal-reverb-2/VST
-	$(MAKE) -C tal-reverb-3/VST
-	$(MAKE) -C tal-vocoder-2/VST
-	$(MAKE) -C vex/VST
-	$(MAKE) -C wolpertinger/VST
+# 	$(MAKE) -C arctican-function/VST
+# 	$(MAKE) -C arctican-pilgrim/VST
+# 	$(MAKE) -C argotlunar/VST
+# 	$(MAKE) -C bitmangler/VST
+# 	$(MAKE) -C capsaicin/VST
+# 	$(MAKE) -C drowaudio-distortion/VST
+# 	$(MAKE) -C drowaudio-distortionshaper/VST
+# 	$(MAKE) -C drowaudio-flanger/VST
+# 	$(MAKE) -C drowaudio-reverb/VST
+# 	$(MAKE) -C drowaudio-tremolo/VST
+# 	$(MAKE) -C drumsynth/VST
+# 	$(MAKE) -C eqinox/VST
+# 	$(MAKE) -C highlife/VST
+# 	$(MAKE) -C hybridreverb2/VST
+# 	$(MAKE) -C juce-demo-plugin/VST
+# 	$(MAKE) -C juce_pitcher/VST
+# 	$(MAKE) -C sDelay/VST
+# 	$(MAKE) -C tal-dub-3/VST
+# 	$(MAKE) -C tal-filter/VST
+# 	$(MAKE) -C tal-filter-2/VST
+# 	$(MAKE) -C tal-noisemaker/VST
+# 	$(MAKE) -C tal-reverb/VST
+# 	$(MAKE) -C tal-reverb-2/VST
+# 	$(MAKE) -C tal-reverb-3/VST
+# 	$(MAKE) -C tal-vocoder-2/VST
+# 	$(MAKE) -C vex/VST
+# 	$(MAKE) -C wolpertinger/VST
 
 clean:
 	# Standalone
