--- a/ports/Makefile
+++ b/ports/Makefile
@@ -17,8 +17,8 @@ libs:
 standalone:
 	$(MAKE) -C arctican-function/Standalone
 	$(MAKE) -C arctican-pilgrim/Standalone
-	$(MAKE) -C argotlunar/Standalone
-	$(MAKE) -C bitmangler/Standalone
+# 	$(MAKE) -C argotlunar/Standalone
+# 	$(MAKE) -C bitmangler/Standalone
 	$(MAKE) -C drowaudio-distortion/Standalone
 	$(MAKE) -C drowaudio-distortionshaper/Standalone
 	$(MAKE) -C drowaudio-flanger/Standalone
@@ -28,19 +28,17 @@ standalone:
 	$(MAKE) -C eqinox/Standalone
 	$(MAKE) -C highlife/Standalone
 	$(MAKE) -C hybridreverb2/Standalone
-	$(MAKE) -C juce-demo-plugin/Standalone
-	$(MAKE) -C juce_pitcher/Standalone
-	$(MAKE) -C sDelay/Standalone
-	$(MAKE) -C tal-dub-3/Standalone
-	$(MAKE) -C tal-filter/Standalone
-	$(MAKE) -C tal-filter-2/Standalone
-	$(MAKE) -C tal-noisemaker/Standalone
-	$(MAKE) -C tal-reverb/Standalone
-	$(MAKE) -C tal-reverb-2/Standalone
-	$(MAKE) -C tal-reverb-3/Standalone
-	$(MAKE) -C tal-vocoder-2/Standalone
-	$(MAKE) -C vex/Standalone
-	$(MAKE) -C wolpertinger/Standalone
+# 	$(MAKE) -C juce-demo-plugin/Standalone
+# 	$(MAKE) -C tal-dub-3/Standalone
+# 	$(MAKE) -C tal-filter/Standalone
+# 	$(MAKE) -C tal-filter-2/Standalone
+# 	$(MAKE) -C tal-noisemaker/Standalone
+# 	$(MAKE) -C tal-reverb/Standalone
+# 	$(MAKE) -C tal-reverb-2/Standalone
+# 	$(MAKE) -C tal-reverb-3/Standalone
+# 	$(MAKE) -C tal-vocoder-2/Standalone
+# 	$(MAKE) -C vex/Standalone
+# 	$(MAKE) -C wolpertinger/Standalone
 
 lv2:
 # 	$(MAKE) -C arctican-function/LV2
@@ -76,30 +74,30 @@ lv2:
 vst:
 	$(MAKE) -C arctican-function/VST
 	$(MAKE) -C arctican-pilgrim/VST
-	$(MAKE) -C argotlunar/VST
-	$(MAKE) -C bitmangler/VST
-	$(MAKE) -C drowaudio-distortion/VST
-	$(MAKE) -C drowaudio-distortionshaper/VST
-	$(MAKE) -C drowaudio-flanger/VST
-	$(MAKE) -C drowaudio-reverb/VST
-	$(MAKE) -C drowaudio-tremolo/VST
-	$(MAKE) -C drumsynth/VST
-	$(MAKE) -C eqinox/VST
-	$(MAKE) -C highlife/VST
-	$(MAKE) -C hybridreverb2/VST
-	$(MAKE) -C juce-demo-plugin/VST
-	$(MAKE) -C juce_pitcher/VST
-	$(MAKE) -C sDelay/VST
-	$(MAKE) -C tal-dub-3/VST
-	$(MAKE) -C tal-filter/VST
-	$(MAKE) -C tal-filter-2/VST
-	$(MAKE) -C tal-noisemaker/VST
-	$(MAKE) -C tal-reverb/VST
-	$(MAKE) -C tal-reverb-2/VST
-	$(MAKE) -C tal-reverb-3/VST
-	$(MAKE) -C tal-vocoder-2/VST
-	$(MAKE) -C vex/VST
-	$(MAKE) -C wolpertinger/VST
+# 	$(MAKE) -C argotlunar/VST
+# 	$(MAKE) -C bitmangler/VST
+# 	$(MAKE) -C drowaudio-distortion/VST
+# 	$(MAKE) -C drowaudio-distortionshaper/VST
+# 	$(MAKE) -C drowaudio-flanger/VST
+# 	$(MAKE) -C drowaudio-reverb/VST
+# 	$(MAKE) -C drowaudio-tremolo/VST
+# 	$(MAKE) -C drumsynth/VST
+# 	$(MAKE) -C eqinox/VST
+# 	$(MAKE) -C highlife/VST
+# 	$(MAKE) -C hybridreverb2/VST
+# 	$(MAKE) -C juce-demo-plugin/VST
+# 	$(MAKE) -C juce_pitcher/VST
+# 	$(MAKE) -C sDelay/VST
+# 	$(MAKE) -C tal-dub-3/VST
+# 	$(MAKE) -C tal-filter/VST
+# 	$(MAKE) -C tal-filter-2/VST
+# 	$(MAKE) -C tal-noisemaker/VST
+# 	$(MAKE) -C tal-reverb/VST
+# 	$(MAKE) -C tal-reverb-2/VST
+# 	$(MAKE) -C tal-reverb-3/VST
+# 	$(MAKE) -C tal-vocoder-2/VST
+# 	$(MAKE) -C vex/VST
+# 	$(MAKE) -C wolpertinger/VST
 
 clean:
 	# Standalone
