--- a/libs/juce-2.0/source/extras/audio plugin demo/Builds/MacOSX/Info.plist
+++ b/libs/juce-2.0/source/extras/audio plugin demo/Builds/MacOSX/Info.plist
@@ -27,7 +27,7 @@
     <array>
       <dict>
         <key>name</key>
-        <string>Juce Demo Plugin</string>
+        <string>Raw Material Software: Juce Demo Plugin</string>
         <key>description</key>
         <string>Juce Demo Plugin</string>
         <key>factoryFunction</key>
