--- a/ports/Makefile
+++ b/ports/Makefile
@@ -19,15 +19,15 @@ standalone:
 	$(MAKE) -C arctican-pilgrim/Standalone
 # 	$(MAKE) -C argotlunar/Standalone
 # 	$(MAKE) -C bitmangler/Standalone
-	$(MAKE) -C drowaudio-distortion/Standalone
-	$(MAKE) -C drowaudio-distortionshaper/Standalone
-	$(MAKE) -C drowaudio-flanger/Standalone
-	$(MAKE) -C drowaudio-reverb/Standalone
-	$(MAKE) -C drowaudio-tremolo/Standalone
-	$(MAKE) -C drumsynth/Standalone
-	$(MAKE) -C eqinox/Standalone
-	$(MAKE) -C highlife/Standalone
-	$(MAKE) -C hybridreverb2/Standalone
+# 	$(MAKE) -C drowaudio-distortion/Standalone
+# 	$(MAKE) -C drowaudio-distortionshaper/Standalone
+# 	$(MAKE) -C drowaudio-flanger/Standalone
+# 	$(MAKE) -C drowaudio-reverb/Standalone
+# 	$(MAKE) -C drowaudio-tremolo/Standalone
+# 	$(MAKE) -C drumsynth/Standalone
+# 	$(MAKE) -C eqinox/Standalone
+# 	$(MAKE) -C highlife/Standalone
+# 	$(MAKE) -C hybridreverb2/Standalone
 # 	$(MAKE) -C juce-demo-plugin/Standalone
 # 	$(MAKE) -C tal-dub-3/Standalone
 # 	$(MAKE) -C tal-filter/Standalone
@@ -103,88 +103,88 @@ clean:
 	# Standalone
 	$(MAKE) clean -C arctican-function/Standalone
 	$(MAKE) clean -C arctican-pilgrim/Standalone
-	$(MAKE) clean -C argotlunar/Standalone
-	$(MAKE) clean -C bitmangler/Standalone
-	$(MAKE) clean -C drowaudio-distortion/Standalone
-	$(MAKE) clean -C drowaudio-distortionshaper/Standalone
-	$(MAKE) clean -C drowaudio-flanger/Standalone
-	$(MAKE) clean -C drowaudio-reverb/Standalone
-	$(MAKE) clean -C drowaudio-tremolo/Standalone
-	$(MAKE) clean -C drumsynth/Standalone
-	$(MAKE) clean -C eqinox/Standalone
-	$(MAKE) clean -C highlife/Standalone
-	$(MAKE) clean -C hybridreverb2/Standalone
-	$(MAKE) clean -C juce-demo-plugin/Standalone
-	$(MAKE) clean -C juce_pitcher/Standalone
-	$(MAKE) clean -C sDelay/Standalone
-	$(MAKE) clean -C tal-dub-3/Standalone
-	$(MAKE) clean -C tal-filter/Standalone
-	$(MAKE) clean -C tal-filter-2/Standalone
-	$(MAKE) clean -C tal-noisemaker/Standalone
-	$(MAKE) clean -C tal-reverb/Standalone
-	$(MAKE) clean -C tal-reverb-2/Standalone
-	$(MAKE) clean -C tal-reverb-3/Standalone
-	$(MAKE) clean -C tal-vocoder-2/Standalone
-	$(MAKE) clean -C vex/Standalone
-	$(MAKE) clean -C wolpertinger/Standalone
+# 	$(MAKE) clean -C argotlunar/Standalone
+# 	$(MAKE) clean -C bitmangler/Standalone
+# 	$(MAKE) clean -C drowaudio-distortion/Standalone
+# 	$(MAKE) clean -C drowaudio-distortionshaper/Standalone
+# 	$(MAKE) clean -C drowaudio-flanger/Standalone
+# 	$(MAKE) clean -C drowaudio-reverb/Standalone
+# 	$(MAKE) clean -C drowaudio-tremolo/Standalone
+# 	$(MAKE) clean -C drumsynth/Standalone
+# 	$(MAKE) clean -C eqinox/Standalone
+# 	$(MAKE) clean -C highlife/Standalone
+# 	$(MAKE) clean -C hybridreverb2/Standalone
+# 	$(MAKE) clean -C juce-demo-plugin/Standalone
+# 	$(MAKE) clean -C juce_pitcher/Standalone
+# 	$(MAKE) clean -C sDelay/Standalone
+# 	$(MAKE) clean -C tal-dub-3/Standalone
+# 	$(MAKE) clean -C tal-filter/Standalone
+# 	$(MAKE) clean -C tal-filter-2/Standalone
+# 	$(MAKE) clean -C tal-noisemaker/Standalone
+# 	$(MAKE) clean -C tal-reverb/Standalone
+# 	$(MAKE) clean -C tal-reverb-2/Standalone
+# 	$(MAKE) clean -C tal-reverb-3/Standalone
+# 	$(MAKE) clean -C tal-vocoder-2/Standalone
+# 	$(MAKE) clean -C vex/Standalone
+# 	$(MAKE) clean -C wolpertinger/Standalone
 
 	# LV2
 	$(MAKE) clean -C arctican-function/LV2
 	$(MAKE) clean -C arctican-pilgrim/LV2
-	$(MAKE) clean -C argotlunar/LV2
-	$(MAKE) clean -C bitmangler/LV2
+# 	$(MAKE) clean -C argotlunar/LV2
+# 	$(MAKE) clean -C bitmangler/LV2
 # 	$(MAKE) clean -C cmt-bitcrusher/LV2
-	$(MAKE) clean -C drowaudio-distortion/LV2
-	$(MAKE) clean -C drowaudio-distortionshaper/LV2
-	$(MAKE) clean -C drowaudio-flanger/LV2
-	$(MAKE) clean -C drowaudio-reverb/LV2
-	$(MAKE) clean -C drowaudio-tremolo/LV2
-	$(MAKE) clean -C drumsynth/LV2
-	$(MAKE) clean -C eqinox/LV2
-	$(MAKE) clean -C highlife/LV2
-	$(MAKE) clean -C hybridreverb2/LV2
-	$(MAKE) clean -C juce-demo-plugin/LV2
-	$(MAKE) clean -C juce_pitcher/LV2
-	$(MAKE) clean -C k-meter/LV2
-	$(MAKE) clean -C sDelay/LV2
-	$(MAKE) clean -C tal-dub-3/LV2
-	$(MAKE) clean -C tal-filter/LV2
-	$(MAKE) clean -C tal-filter-2/LV2
-	$(MAKE) clean -C tal-noisemaker/LV2
-	$(MAKE) clean -C tal-reverb/LV2
-	$(MAKE) clean -C tal-reverb-2/LV2
-	$(MAKE) clean -C tal-reverb-3/LV2
-	$(MAKE) clean -C tal-vocoder-2/LV2
-	$(MAKE) clean -C vex/LV2
-	$(MAKE) clean -C wolpertinger/LV2
+# 	$(MAKE) clean -C drowaudio-distortion/LV2
+# 	$(MAKE) clean -C drowaudio-distortionshaper/LV2
+# 	$(MAKE) clean -C drowaudio-flanger/LV2
+# 	$(MAKE) clean -C drowaudio-reverb/LV2
+# 	$(MAKE) clean -C drowaudio-tremolo/LV2
+# 	$(MAKE) clean -C drumsynth/LV2
+# 	$(MAKE) clean -C eqinox/LV2
+# 	$(MAKE) clean -C highlife/LV2
+# 	$(MAKE) clean -C hybridreverb2/LV2
+# 	$(MAKE) clean -C juce-demo-plugin/LV2
+# 	$(MAKE) clean -C juce_pitcher/LV2
+# 	$(MAKE) clean -C k-meter/LV2
+# 	$(MAKE) clean -C sDelay/LV2
+# 	$(MAKE) clean -C tal-dub-3/LV2
+# 	$(MAKE) clean -C tal-filter/LV2
+# 	$(MAKE) clean -C tal-filter-2/LV2
+# 	$(MAKE) clean -C tal-noisemaker/LV2
+# 	$(MAKE) clean -C tal-reverb/LV2
+# 	$(MAKE) clean -C tal-reverb-2/LV2
+# 	$(MAKE) clean -C tal-reverb-3/LV2
+# 	$(MAKE) clean -C tal-vocoder-2/LV2
+# 	$(MAKE) clean -C vex/LV2
+# 	$(MAKE) clean -C wolpertinger/LV2
 
 	# VST
 	$(MAKE) clean -C arctican-function/VST
 	$(MAKE) clean -C arctican-pilgrim/VST
-	$(MAKE) clean -C argotlunar/VST
-	$(MAKE) clean -C bitmangler/VST
-	$(MAKE) clean -C drowaudio-distortion/VST
-	$(MAKE) clean -C drowaudio-distortionshaper/VST
-	$(MAKE) clean -C drowaudio-flanger/VST
-	$(MAKE) clean -C drowaudio-reverb/VST
-	$(MAKE) clean -C drowaudio-tremolo/VST
-	$(MAKE) clean -C drumsynth/VST
-	$(MAKE) clean -C eqinox/VST
-	$(MAKE) clean -C highlife/VST
-	$(MAKE) clean -C hybridreverb2/VST
-	$(MAKE) clean -C juce-demo-plugin/VST
-	$(MAKE) clean -C juce_pitcher/VST
-	$(MAKE) clean -C sDelay/VST
-	$(MAKE) clean -C tal-dub-3/VST
-	$(MAKE) clean -C tal-filter/VST
-	$(MAKE) clean -C tal-filter-2/VST
-	$(MAKE) clean -C tal-noisemaker/VST
-	$(MAKE) clean -C tal-reverb/VST
-	$(MAKE) clean -C tal-reverb-2/VST
-	$(MAKE) clean -C tal-reverb-3/VST
-	$(MAKE) clean -C tal-vocoder-2/VST
-	$(MAKE) clean -C vex/VST
-	$(MAKE) clean -C wolpertinger/VST
+# 	$(MAKE) clean -C argotlunar/VST
+# 	$(MAKE) clean -C bitmangler/VST
+# 	$(MAKE) clean -C drowaudio-distortion/VST
+# 	$(MAKE) clean -C drowaudio-distortionshaper/VST
+# 	$(MAKE) clean -C drowaudio-flanger/VST
+# 	$(MAKE) clean -C drowaudio-reverb/VST
+# 	$(MAKE) clean -C drowaudio-tremolo/VST
+# 	$(MAKE) clean -C drumsynth/VST
+# 	$(MAKE) clean -C eqinox/VST
+# 	$(MAKE) clean -C highlife/VST
+# 	$(MAKE) clean -C hybridreverb2/VST
+# 	$(MAKE) clean -C juce-demo-plugin/VST
+# 	$(MAKE) clean -C juce_pitcher/VST
+# 	$(MAKE) clean -C sDelay/VST
+# 	$(MAKE) clean -C tal-dub-3/VST
+# 	$(MAKE) clean -C tal-filter/VST
+# 	$(MAKE) clean -C tal-filter-2/VST
+# 	$(MAKE) clean -C tal-noisemaker/VST
+# 	$(MAKE) clean -C tal-reverb/VST
+# 	$(MAKE) clean -C tal-reverb-2/VST
+# 	$(MAKE) clean -C tal-reverb-3/VST
+# 	$(MAKE) clean -C tal-vocoder-2/VST
+# 	$(MAKE) clean -C vex/VST
+# 	$(MAKE) clean -C wolpertinger/VST
 
 	rm -rf */Standalone/intermediate
 	rm -rf */LV2/intermediate
