Fix the remaining ports

--- a/ports/Makefile
+++ b/ports/Makefile
@@ -22,9 +22,9 @@ standalone:
 	$(MAKE) -C drowaudio-flanger/Standalone
 	$(MAKE) -C drowaudio-reverb/Standalone
 	$(MAKE) -C drowaudio-tremolo/Standalone
-# 	$(MAKE) -C drumsynth/Standalone
-# 	$(MAKE) -C eqinox/Standalone
-# 	$(MAKE) -C highlife/Standalone
+	$(MAKE) -C drumsynth/Standalone
+	$(MAKE) -C eqinox/Standalone
+	$(MAKE) -C highlife/Standalone
 # 	$(MAKE) -C juce-demo-plugin/Standalone
 	$(MAKE) -C tal-dub-3/Standalone
 	$(MAKE) -C tal-filter/Standalone
@@ -34,8 +34,8 @@ standalone:
 	$(MAKE) -C tal-reverb-2/Standalone
 	$(MAKE) -C tal-reverb-3/Standalone
 	$(MAKE) -C tal-vocoder-2/Standalone
-# 	$(MAKE) -C vex/Standalone
-# 	$(MAKE) -C wolpertinger/Standalone
+	$(MAKE) -C vex/Standalone
+	$(MAKE) -C wolpertinger/Standalone
 
 lv2:
 # 	$(MAKE) -C arctican-function/LV2
@@ -68,9 +68,9 @@ vst:
 	$(MAKE) -C drowaudio-flanger/VST
 	$(MAKE) -C drowaudio-reverb/VST
 	$(MAKE) -C drowaudio-tremolo/VST
-# 	$(MAKE) -C drumsynth/VST
-# 	$(MAKE) -C eqinox/VST
-# 	$(MAKE) -C highlife/VST
+	$(MAKE) -C drumsynth/VST
+	$(MAKE) -C eqinox/VST
+	$(MAKE) -C highlife/VST
 # 	$(MAKE) -C juce-demo-plugin/VST
 	$(MAKE) -C tal-dub-3/VST
 	$(MAKE) -C tal-filter/VST
@@ -80,8 +80,8 @@ vst:
 	$(MAKE) -C tal-reverb-2/VST
 	$(MAKE) -C tal-reverb-3/VST
 	$(MAKE) -C tal-vocoder-2/VST
-# 	$(MAKE) -C vex/VST
-# 	$(MAKE) -C wolpertinger/VST
+	$(MAKE) -C vex/VST
+	$(MAKE) -C wolpertinger/VST
 
 clean:
 	# Standalone
@@ -92,9 +92,9 @@ clean:
 	$(MAKE) clean -C drowaudio-flanger/Standalone
 	$(MAKE) clean -C drowaudio-reverb/Standalone
 	$(MAKE) clean -C drowaudio-tremolo/Standalone
-# 	$(MAKE) clean -C drumsynth/Standalone
-# 	$(MAKE) clean -C eqinox/Standalone
-# 	$(MAKE) clean -C highlife/Standalone
+	$(MAKE) clean -C drumsynth/Standalone
+	$(MAKE) clean -C eqinox/Standalone
+	$(MAKE) clean -C highlife/Standalone
 # 	$(MAKE) clean -C juce-demo-plugin/Standalone
 	$(MAKE) clean -C tal-dub-3/Standalone
 	$(MAKE) clean -C tal-filter/Standalone
@@ -104,8 +104,8 @@ clean:
 	$(MAKE) clean -C tal-reverb-2/Standalone
 	$(MAKE) clean -C tal-reverb-3/Standalone
 	$(MAKE) clean -C tal-vocoder-2/Standalone
-# 	$(MAKE) clean -C vex/Standalone
-# 	$(MAKE) clean -C wolpertinger/Standalone
+	$(MAKE) clean -C vex/Standalone
+	$(MAKE) clean -C wolpertinger/Standalone
 
 	# LV2
 	$(MAKE) clean -C arctican-function/LV2
@@ -115,9 +115,9 @@ clean:
 	$(MAKE) clean -C drowaudio-flanger/LV2
 	$(MAKE) clean -C drowaudio-reverb/LV2
 	$(MAKE) clean -C drowaudio-tremolo/LV2
-# 	$(MAKE) clean -C drumsynth/LV2
-# 	$(MAKE) clean -C eqinox/LV2
-# 	$(MAKE) clean -C highlife/LV2
+	$(MAKE) clean -C drumsynth/LV2
+	$(MAKE) clean -C eqinox/LV2
+	$(MAKE) clean -C highlife/LV2
 # 	$(MAKE) clean -C juce-demo-plugin/LV2
 	$(MAKE) clean -C tal-dub-3/LV2
 	$(MAKE) clean -C tal-filter/LV2
@@ -127,8 +127,8 @@ clean:
 	$(MAKE) clean -C tal-reverb-2/LV2
 	$(MAKE) clean -C tal-reverb-3/LV2
 	$(MAKE) clean -C tal-vocoder-2/LV2
-# 	$(MAKE) clean -C vex/LV2
-# 	$(MAKE) clean -C wolpertinger/LV2
+	$(MAKE) clean -C vex/LV2
+	$(MAKE) clean -C wolpertinger/LV2
 
 	# VST
 	$(MAKE) clean -C arctican-function/VST
@@ -138,9 +138,9 @@ clean:
 	$(MAKE) clean -C drowaudio-flanger/VST
 	$(MAKE) clean -C drowaudio-reverb/VST
 	$(MAKE) clean -C drowaudio-tremolo/VST
-# 	$(MAKE) clean -C drumsynth/VST
-# 	$(MAKE) clean -C eqinox/VST
-# 	$(MAKE) clean -C highlife/VST
+	$(MAKE) clean -C drumsynth/VST
+	$(MAKE) clean -C eqinox/VST
+	$(MAKE) clean -C highlife/VST
 # 	$(MAKE) clean -C juce-demo-plugin/VST
 	$(MAKE) clean -C tal-dub-3/VST
 	$(MAKE) clean -C tal-filter/VST
@@ -150,8 +150,8 @@ clean:
 	$(MAKE) clean -C tal-reverb-2/VST
 	$(MAKE) clean -C tal-reverb-3/VST
 	$(MAKE) clean -C tal-vocoder-2/VST
-# 	$(MAKE) clean -C vex/VST
-# 	$(MAKE) clean -C wolpertinger/VST
+	$(MAKE) clean -C vex/VST
+	$(MAKE) clean -C wolpertinger/VST
 
 	rm -rf */Standalone/intermediate
 	rm -rf */LV2/intermediate
